--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
         <!-- <div> -->
         <div class="project-detail">
           <div class="project-img">
-            <a href="/images/cybesoftcinema.png" target="_blank">
-              <img src="/images/cybesoftcinema.png" alt="" width="100%"
+            <a href="images/cybesoftcinema.png" target="_blank">
+              <img src="images/cybesoftcinema.png" alt="" width="100%"
             /></a>
           </div>
           <div class="project-name"><p>CYBERSOFT CINEMA</p></div>
