--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </div>
         <div>
           <div class="container-1 active-container" style="margin-top: 20px">
-            <div class="title"><h3>Hoạt động</h3></div>
+            <div class="title"><h3>Active</h3></div>
             <div class="icon"><i class="ic-toolbox"></i></div>
             <div class="experiences hidden" id="active">
               <h5>FPT Edu Hackatho 20XX</h5>
@@ -344,8 +344,8 @@
       </div>
       <div class="certificate-container">
         <div class="certificate-info">
-          <a href="/images/Cert_DBI.png" target="_blank">
-            <img src="/images/Cert_DBI.png" alt="" height="90px"
+          <a href="images/Cert_DBI.png" target="_blank">
+            <img src="images/Cert_DBI.png" alt="" height="90px"
           /></a>
           <div class="certificate-details">
             <h5>CHỨNG CHỈ LẬP TRÌNH WEB- FUNIX</h5>
@@ -357,11 +357,11 @@
         </div>
         <div class="certificate-info">
           <a
-            href="/images/certification_cybersoft_page-0001.jpg"
+            href="images/certification_cybersoft_page-0001.jpg"
             target="_blank"
           >
             <img
-              src="/images/certification_cybersoft_page-0001.jpg"
+              src="images/certification_cybersoft_page-0001.jpg"
               alt=""
               width="100px"
           /></a>
@@ -384,8 +384,8 @@
         <!-- <div> -->
         <div class="project-detail">
           <div class="project-img">
-            <a href="/images/project_1.png" target="_blank">
-              <img src="/images/project_1.png" alt="" width="100%"
+            <a href="images/project_1.png" target="_blank">
+              <img src="images/project_1.png" alt="" width="100%"
             /></a>
           </div>
           <div class="project-name"><p>DIGITAL CURRICULUM VITAE</p></div>
@@ -432,8 +432,8 @@
         <!-- <div> -->
         <div class="project-detail">
           <div class="project-img">
-            <a href="/images/crm.png" target="_blank">
-              <img src="/images/crm.png" alt="" width="100%"
+            <a href="images/crm.png" target="_blank">
+              <img src="images/crm.png" alt="" width="100%"
             /></a>
           </div>
           <div class="project-name">
