--- a/digital-cv.html
+++ b/digital-cv.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/digital-cv.css" />
   </head>
   <body class="bg-primary">
-    <div class="row justify-content-between mt-4 mx-5">
+    <div class="row justify-content-between">
       <div class="col-lg-5 col-sm-12 custom-col-lg-5">
         <div class="row mb-4 justify-content-center">
           <div class="col-lg-12 first-row" style="background-color: white">
