--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         />
         <div id="banner">
           <h2>Phan Phúc An</h2>
-          <!-- <span>Java Developer</span><br /> -->
           <span>Effort is the bridge between</span><br />
           <span>dreams and reality.</span>
         </div>
@@ -75,7 +74,6 @@
               <li><strong>Phone Number</strong> : (+84) 374 235 862</li>
               <li><strong>Email</strong> : anppfx23183@funix.edu.vn</li>
               <li><strong>Address</strong> : District 8, Ho Chi Minh City</li>
-              <!-- <li><strong>Website</strong> : https://abc.tech</li> -->
               <div class="contact">
                 <a href="#"><i class="icon-twitter color"></i></a>
                 <a href="https://www.facebook.com/phucan.phan.1401/"
@@ -177,7 +175,6 @@
                   their dwellings.
                 </li>
               </ul>
-              <!-- <br /> -->
               <h5>
                 CENTER FOR RESEARCH AND APPLICATION OF SCIENCE AND TECHNOLOGY
               </h5>
@@ -224,26 +221,6 @@
                 <li>- MS Office.</li>
                 <li>- Problem-solving abilities and interpersonal skills.</li>
               </ul>
-
-              <!-- <p>HTML/CSS: Fundamental</p>
-            <span class="skill"></span>
-            <span class="skill"></span>
-            <span class="none-skill"></span>
-            <br /><br />
-            <p>Javascrip: Fundamental</p>
-            <span class="skill"></span>
-            <span class="none-skill"></span>
-            <span class="none-skill"></span>
-            <br /><br />
-            <p>Java: Fundamental</p>
-            <span class="skill"></span>
-            <span class="none-skill"></span>
-            <span class="none-skill"></span>
-            <br /><br />
-            <p>Bootstrap 5: Fundamental</p>
-            <span class="skill"></span>
-            <span class="none-skill"></span>
-            <span class="none-skill"></span> -->
             </div>
             <div class="btn-space">
               <button
@@ -344,9 +321,11 @@
       </div>
       <div class="certificate-container">
         <div class="certificate-info">
-          <a href="images/Cert_DBI.png" target="_blank">
-            <img src="images/Cert_DBI.png" alt="" height="90px"
-          /></a>
+          <div class="certificate-img">
+            <a href="images/Cert_DBI.png" target="_blank">
+              <img src="images/Cert_DBI.png" alt="" height="90px"
+            /></a>
+          </div>
           <div class="certificate-details">
             <h5>CHỨNG CHỈ LẬP TRÌNH WEB- FUNIX</h5>
             <ul>
@@ -356,15 +335,17 @@
           </div>
         </div>
         <div class="certificate-info">
-          <a
-            href="images/certification_cybersoft_page-0001.jpg"
-            target="_blank"
-          >
-            <img
-              src="images/certification_cybersoft_page-0001.jpg"
-              alt=""
-              width="100px"
-          /></a>
+          <div class="certificate-img">
+            <a
+              href="images/certification_cybersoft_page-0001.jpg"
+              target="_blank"
+            >
+              <img
+                src="images/certification_cybersoft_page-0001.jpg"
+                alt=""
+                width="100px"
+            /></a>
+          </div>
           <div class="certificate-details">
             <h5>CYBERSOFT ACADEMY</h5>
             <ul>
@@ -373,7 +354,6 @@
             </ul>
           </div>
         </div>
-        <div class="certificate-info"></div>
       </div>
     </section>
     <section id="project">
@@ -381,14 +361,15 @@
         <h3 class="section-title">PROJECT</h3>
       </div>
       <div class="project-container">
-        <!-- <div> -->
         <div class="project-detail">
           <div class="project-img">
             <a href="images/project_1.png" target="_blank">
               <img src="images/project_1.png" alt="" width="100%"
             /></a>
           </div>
-          <div class="project-name"><p>DIGITAL CURRICULUM VITAE</p></div>
+          <div class="project-name">
+            <p><a href="digital-cv.html">DIGITAL CURRICULUM VITAE</a></p>
+          </div>
           <div class="project-info">
             <span>2023</span>
             <div><i class="icon-user-1"></i><span>FUNIX</span></div>
@@ -428,8 +409,6 @@
             </table>
           </div>
         </div>
-        <!-- </div> -->
-        <!-- <div> -->
         <div class="project-detail">
           <div class="project-img">
             <a href="images/crm.png" target="_blank">
@@ -437,7 +416,9 @@
             /></a>
           </div>
           <div class="project-name">
-            <p>CUSTOMER RELATIONSHIP MANAGEMENT</p>
+            <p>
+              <a href="digital-cv.html">CUSTOMER RELATIONSHIP MANAGEMENT</a>
+            </p>
           </div>
           <div class="project-info">
             <span>2023</span>
@@ -475,15 +456,15 @@
             </table>
           </div>
         </div>
-        <!-- </div> -->
-        <!-- <div> -->
         <div class="project-detail">
           <div class="project-img">
             <a href="images/cybesoftcinema.png" target="_blank">
               <img src="images/cybesoftcinema.png" alt="" width="100%"
             /></a>
           </div>
-          <div class="project-name"><p>CYBERSOFT CINEMA</p></div>
+          <div class="project-name">
+            <p><a href="digital-cv.html">CYBERSOFT CINEMA</a></p>
+          </div>
           <div class="project-info">
             <span>2023</span>
             <div><i class="icon-user-1"></i><span>CYBERSOFT</span></div>
@@ -519,7 +500,6 @@
                   >
                 </td>
               </tr>
-
               <tr>
                 <td style="width: 100px">Description:</td>
                 <td>
@@ -532,7 +512,6 @@
             </table>
           </div>
         </div>
-        <!-- </div> -->
       </div>
     </section>
     <section id="footer" class="bg-grey">
